新建kotlin学习组件并引入markdown渲染

--- a/问题自查文档.md
+++ b/问题自查文档.md
@@ -13,3 +13,4 @@
     1.有没有创建Application类,有没有初始化ARouter 
     2.有没有在ModelApplicationManage里面注册Application类
     3.有没有在宿主App里面依赖该Model
+    3.Activity继承自BaseActivity
