--- a/model/model-home/src/main/res/values/strings.xml
+++ b/model/model-home/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="home_app_name">首页模块</string>
+    <string name="home_bt_text_kotlin1">kotlin 基础</string>
+    <string name="home_bt_text_kotlin2">kotlin 函数的基本用法</string>
+    <string name="home_bt_text_kotlin3">3</string>
 </resources>
