--- a/model/model-home/src/main/res/values/strings.xml
+++ b/model/model-home/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="home_bt_text_kotlin2">kotlin 函数的基本用法</string>
     <string name="home_bt_text_kotlin3">文件操作的 demo</string>
     <string name="home_bt_text_network_base">network的基本用法</string>
-    <string name="home_bt_text_network_replace_url">多network</string>
+    <string name="home_bt_text_network_replace_url">airpods</string>
     <string name="home_bt_text_network_download">网络下载</string>
 </resources>
