--- a/model/model-home/src/main/res/values-en/strings.xml
+++ b/model/model-home/src/main/res/values-en/strings.xml
@@ -6,6 +6,7 @@
     <string name="home_bt_text_network_base">network的基本用法</string>
     <string name="home_bt_text_network_replace_url">airpods</string>
     <string name="home_bt_text_network_download">网络下载</string>
+    <string name="home_bt_text_arcore">ARCore</string>
     <string name="home_title_page1">Home</string>
     <string name="home_juzi">竹竿有甘苦，我爱抱苦节</string>
     <string name="home_portrait_description">头像</string>
