--- a/model/model-airpods/src/main/res/values/strings.xml
+++ b/model/model-airpods/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="airpods_app_name">model-airpods</string>
+    <string name="airpods_tile_disconnected_title">未连接</string>
 </resources>
