--- a/问题自查文档.md
+++ b/问题自查文档.md
@@ -1,17 +1,23 @@
-1.如果遇到ARouter报错 则试下以下解决办法  
+1.如果遇到ARouter报错 则试下以下解决办法
 (1).support-v4包与Androidx冲突 implementation(rootProject.ext.lib_arouter_api) { //过滤掉v4包里面的东西
 防止和AndroidX冲突 exclude group: 'com.android.support', module: 'support-v4' }
 (2).编译器异常 在gradle.properties文件里面添加 android.enableJetifier=true 让依赖库也迁移到Androidx
 
 2.如果遇到打开另一个Model的页面打不开,请尝试:
-1.有没有创建Application类,有没有初始化ARouter  
-2.有没有在ModelApplicationManage里面注册Application类   
-3.有没有在宿主App里面依赖该Model   
-4.Activity继承自BaseActivity
-
-
+    1.有没有创建Application类,有没有初始化ARouter
+    2.有没有在ModelApplicationManage里面注册Application类
+    3.有没有在宿主App里面依赖该Model
+    4.Activity继承自BaseActivity
 
 > 无线连接调试
 > adb tcpip 5555
 > adb kill-server
 > adb connect [your ip]
+
+色卡网站
+
+https://color.uisdc.com/gradient.html
+
+https://color.adobe.com/zh/create/color-wheel
+
+http://zhongguose.com/
