--- a/model/model-home/src/main/res/values-en/strings.xml
+++ b/model/model-home/src/main/res/values-en/strings.xml
@@ -17,4 +17,5 @@
 
 
     <string name="home_portrait_description">头像</string>
+    <string name="home_fix_behavior">com.model.home.pages.widget.FixScrollingBehavior</string>
 </resources>
