个人中心顶部协调者布局

--- a/沉浸式状态栏.md
+++ b/沉浸式状态栏.md
@@ -19,3 +19,6 @@ setBarStyle(statusBarStyle())
 > Android 提供了三个用于将应用设为全屏模式选项：向后倾斜模式、沉浸模式和粘性沉浸模式。
 
 向后倾斜模式适用于用户不会与屏幕进行大量互动的全屏体验，例如在观看视频时。 当用户希望调出系统栏时，只需点按屏幕上的任意位置即可。
+
+通过自定义Behavior解决AppBarLayout 不能Fling的问题:
+https://juejin.cn/post/6844903984931536904
